@@ -16,8 +16,8 @@
 #include "device.h"
 #include "cam_menu.h"
 
-#define MCLI_DEVICE_VERSION "0.9.4"
-#define MCLI_PLUGIN_VERSION "0.9.4"
+#define MCLI_DEVICE_VERSION "0.9.4.1"
+#define MCLI_PLUGIN_VERSION "0.9.4.1"
 #define MCLI_PLUGIN_DESCRIPTION trNOOP ("NetCeiver Client Application")
 #define MCLI_SETUPMENU_DESCRIPTION trNOOP ("NetCeiver Client Application")
 #define MCLI_MAINMENU_DESCRIPTION trNOOP ("Common Interface")
@@ -37,8 +37,19 @@
 
 //#define DEBUG_PIDS 
 //#define DEBUG_TUNE_EXTRA
-//#define DEBUG_TUNE
+#define DEBUG_TUNE
 //#define DEBUG_RESOURCES
+
+#define DEBUG_BIT_PIDS 	0x01
+#define DEBUG_BIT_TUNE_EXTRA	0x02
+#define DEBUG_BIT_TUNE		0x04
+#define DEBUG_BIT_RESOURCES	0x08
+#define DEBUG_BIT_TUNE_PC	0x40	// ProvideChannel
+
+#define DEBUG_MASK(bit, code)	if ((m_debugmask && bit) != 0) { code };
+
+extern int m_debugmask;
+extern bool m_cam_disable;
 
 class cMcliDeviceObject:public cListObject
 {
